--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/typeorm": "^10.0.1",
         "class-validator": "^0.14.1",
+        "nats": "^2.19.0",
         "pg": "^8.11.3",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1",
